--- a/_posts/2019-12-29-the-us-narrative-today.html
+++ b/_posts/2019-12-29-the-us-narrative-today.html
@@ -120,107 +120,107 @@ stories:
   domain: http://www.clintonherald.com/
   link: https://www.clintonherald.com/region/officials-confirm-no-survivors-from-hawaii-helicopter-crash/article_8f48891d-7044-590e-af06-0d5e17df8017.html
 images:
-- name: cargo-ship-cargo-ship-on-sea-copper-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-copper-circuit.jpg
-- name: server-cloud-server-racks-clouds-purp-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-purp-paper.jpg
-- name: catacombs-catacombs-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-horiz-circuit.jpg
-- name: fence-fence-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/fence-fence-blue-brush.jpg
-- name: castle-wall-DSC-0067-purple-pond.JPG
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/castle-wall-DSC-0067-purple-pond.JPG
-- name: miamibeach-miamibeach-plentiful.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/miamibeach-miamibeach-plentiful.jpg
-- name: white-house-whitehouse-gan-vogh.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-gan-vogh.jpg
-- name: lincoln-memorial-lincolnmemorial-rainbow-festival.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/lincoln-memorial-lincolnmemorial-rainbow-festival.jpg
-- name: la-muse-face-eyes-open-statue.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/la-muse-face-eyes-open-statue.jpg
-- name: mediterranean-mediterranean-clean-view.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mediterranean-mediterranean-clean-view.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-5.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-blue-circuit-5.png
-- name: oldroad-old-road-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldroad-old-road-atari-missle.jpg
-- name: soldiers-talking-34536952486-52cd6bb1d1-h-atari-missle.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-atari-missle.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-crafty-painting.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-crafty-painting.png
-- name: stalin-time-city-clouds-building-crowded.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-city-clouds-building-crowded.jpg
-- name: catacombs-catacombs-colorful-blocks.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/catacombs-catacombs-colorful-blocks.jpg
-- name: stalin-time-working-on-railroad-1.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-working-on-railroad-1.jpg
-- name: carry-load-carryload-sand-paper.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/carry-load-carryload-sand-paper.jpg
-- name: server-cloud-server-racks-door-kandinsky-bv.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-door-kandinsky-bv.jpg
-- name: statue-face-open-mouth-statue-face-open-mouth-cinnamon-rolls.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/statue-face-open-mouth-statue-face-open-mouth-cinnamon-rolls.png
-- name: nazi-invasion-crypto-wheels-old-compute-bletchley.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-crypto-wheels-old-compute-bletchley.jpg
-- name: rockingchair-rockingchair-dali-three.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-dali-three.jpg
-- name: dragon-desert-desert-dragon-umberto-bocc.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/dragon-desert-desert-dragon-umberto-bocc.jpg
-- name: crow_dark_pigeon.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crow_dark_pigeon.jpg
-- name: christianity-christianity-under-construction-horiz-circuit.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/christianity-christianity-under-construction-horiz-circuit.jpg
-- name: locked-up-steam-lock-up-steam-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-hot-spicy.jpg
-- name: blossombar-aqua-file-00-00-50-62.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/blossombar-aqua-file-00-00-50-62.jpg
-- name: oldcabin-store-sunday.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-store-sunday.jpg
-- name: white-house-lawn-white-house-lawn-hot-spicy.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-lawn-white-house-lawn-hot-spicy.jpg
-- name: locked-up-steam-lock-up-steam-smooth-ride.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-smooth-ride.jpg
-- name: birdhouse-birdhouse-blue-brush.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/birdhouse-birdhouse-blue-brush.jpg
-- name: old-door-lock-old-door-lock-2-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-ww2-color.jpg
-- name: old-granary-field-oldhouse-ww2-color.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-ww2-color.jpg
-- name: oldcabin-oldcabin-dark-soul.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-dark-soul.jpg
-- name: containership-containership-purple-pond.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/containership-containership-purple-pond.jpg
-- name: old-door-lock-old-door-lock-mucha-mult.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-mucha-mult.jpg
-- name: copper-circuit-IMG_4430.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/copper-circuit-IMG_4430.jpg
-- name: aws-s3-stories-new-statue-face-open-mouth-copper-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-statue-face-open-mouth-copper-circuit.png
-- name: server-cloud1-nazi-poster.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud1-nazi-poster.jpg
-- name: oldcabin-oldcabin-really-hot.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-really-hot.jpg
-- name: stalin-time-city-clouds-waterfront.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-city-clouds-waterfront.jpg
-- name: stories-new-art-museum-light-dali.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stories-new-art-museum-light-dali.jpg
-- name: san-francisco-street-view-san-francisco-street-view-ww2-dresden.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-ww2-dresden.jpg
-- name: aws-s3-columbiagorge-columbiagorge-transformed-still.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-columbiagorge-columbiagorge-transformed-still.jpg
-- name: nazi-invasion-city-building-trees-sky.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-city-building-trees-sky.jpg
-- name: scream-IMG_1937.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/scream-IMG_1937.jpg
-- name: redondo-beach-harbor-redondo-beach-harbor-dark-rain.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/redondo-beach-harbor-redondo-beach-harbor-dark-rain.jpg
-- name: wind-mills-windmills-kand-two.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-kand-two.jpg
-- name: white-house-whitehouse-space-pizza.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/white-house-whitehouse-space-pizza.jpg
-- name: bluelake-crunch-paper-file-00-00-00-00.jpg
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bluelake-crunch-paper-file-00-00-00-00.jpg
-- name: crypto-machine-bletchley-crypto-machine-bletchley-copper-circuit.png
-  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/crypto-machine-bletchley-crypto-machine-bletchley-copper-circuit.png
+- name: capital-battle-capitolbattle-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/capital-battle-capitolbattle-green-zuma.jpg
+- name: san-francisco-city-bridge-sf-city-bridge-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-city-bridge-sf-city-bridge-emily-carr.jpg
+- name: old-door-lock-old-door-lock-2-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-door-lock-old-door-lock-2-constitution.jpg
+- name: curtain-curtain-dark-rain.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-dark-rain.jpg
+- name: oldhouse-oldhouse-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldhouse-oldhouse-emily-carr.jpg
+- name: machine-road-machine-road-diego-rivera1.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/machine-road-machine-road-diego-rivera1.jpg
+- name: gypsy-wagon-gypsywagon-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-creativity.jpg
+- name: oldcabin-oldcabin-sunday.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldcabin-oldcabin-sunday.jpg
+- name: soldiers-talking-34536952486-52cd6bb1d1-h-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/soldiers-talking-34536952486-52cd6bb1d1-h-internet-numbers.jpg
+- name: rockingchair-rockingchair-nazi-poster.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-nazi-poster.jpg
+- name: razorcliff-razorcliff-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/razorcliff-razorcliff-dali-two.jpg
+- name: rain-princess-container-several-colors-grey.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-container-several-colors-grey.jpg
+- name: desert-dragon-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/desert-dragon-purp-paper.jpg
+- name: power-lines-power-lines-empty-space-smoking-cigarette.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/power-lines-power-lines-empty-space-smoking-cigarette.jpg
+- name: oldtrain-oldtrain-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldtrain-oldtrain-marcel-duchamp.jpg
+- name: oldsmallboat-oldsmallboat-pablo-blue.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/oldsmallboat-oldsmallboat-pablo-blue.jpg
+- name: san-francisco-street-view-san-francisco-street-view-plentiful.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-street-view-san-francisco-street-view-plentiful.jpg
+- name: rockingchair-rockingchair-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rockingchair-rockingchair-purp-paper.jpg
+- name: school-clouds-church-clouds-space-pizza.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/school-clouds-church-clouds-space-pizza.jpg
+- name: liberty-back-statue-liberty-back-marcel-duchamp.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-marcel-duchamp.jpg
+- name: old-granary-field-oldhouse-colorful-dream.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-granary-field-oldhouse-colorful-dream.jpg
+- name: bf-skinner-freeway-carss-overpass.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-freeway-carss-overpass.jpg
+- name: aws-s3-stories-new-40-45-800-500-0-max-0--5--5.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-stories-new-40-45-800-500-0-max-0--5--5.jpg
+- name: rain-princess-border-fence-down-the-line-2.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-border-fence-down-the-line-2.jpg
+- name: aws-s3-square-raven-fence-square.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/aws-s3-square-raven-fence-square.jpg
+- name: downtown-los-angeles-downtown-la-pablo-blue.JPG
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtown-los-angeles-downtown-la-pablo-blue.JPG
+- name: stalin-time-train-tracks-bending.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/stalin-time-train-tracks-bending.jpg
+- name: mistywoods-babyfoot-dali-three.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/mistywoods-babyfoot-dali-three.jpg
+- name: hollywood-building-hollywood-building-hot-spicy.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/hollywood-building-hollywood-building-hot-spicy.jpg
+- name: wind-mills-windmills-dali-two.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-dali-two.jpg
+- name: supreme-court-supremecourt-far-away.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/supreme-court-supremecourt-far-away.jpg
+- name: status-berlin-status-berlin-graham-sutherland.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-graham-sutherland.jpg
+- name: server-cloud-server-racks-clouds-constitution.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/server-cloud-server-racks-clouds-constitution.jpg
+- name: status-berlin-status-berlin-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/status-berlin-status-berlin-creativity.jpg
+- name: meadowbutterfly-meadow-butterfly-internet-numbers.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/meadowbutterfly-meadow-butterfly-internet-numbers.jpg
+- name: wind-mills-windmills-light-dali.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/wind-mills-windmills-light-dali.jpg
+- name: liberty-back-statue-liberty-back-creativity.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/liberty-back-statue-liberty-back-creativity.jpg
+- name: curtain-curtain-yellow-collage.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/curtain-curtain-yellow-collage.jpg
+- name: docks-docks-emily-carr.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/docks-docks-emily-carr.jpg
+- name: gypsy-wagon-gypsywagon-gred-mash.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/gypsy-wagon-gypsywagon-gred-mash.jpg
+- name: nazi-invasion-statue-playing-instrument.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/nazi-invasion-statue-playing-instrument.jpg
+- name: file-00-01-19-48.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/file-00-01-19-48.jpg
+- name: cargo-ship-cargo-ship-on-sea-blue-circuit.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/cargo-ship-cargo-ship-on-sea-blue-circuit.jpg
+- name: los-angeles-from-observatory-losangeles-from-observatory-satan-red.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/los-angeles-from-observatory-losangeles-from-observatory-satan-red.jpg
+- name: old-barn-old-barn-1500-purp-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/old-barn-old-barn-1500-purp-paper.jpg
+- name: locked-up-steam-lock-up-steam-crunch-paper.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/locked-up-steam-lock-up-steam-crunch-paper.jpg
+- name: rain-princess-capital-records-building.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/rain-princess-capital-records-building.jpg
+- name: downtheline-downtheline-green-zuma.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/downtheline-downtheline-green-zuma.jpg
+- name: san-francisco-skyline-night-san-francisco-skyline-night-attack-planes.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/san-francisco-skyline-night-san-francisco-skyline-night-attack-planes.jpg
+- name: walled-garden-walled-garden-matrix.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/walled-garden-walled-garden-matrix.jpg
+- name: bf-skinner-down-side-street-shop-sign.jpg
+  url: https://s3.amazonaws.com/kinlane-productions/algorotoscope-master/bf-skinner-down-side-street-shop-sign.jpg
 ---
 Camden Cove Employees Take Home Awards.&nbsp;Nicholls St West Virginia Basketball.&nbsp;Saturday's Girls Basketball Results.&nbsp;Trump Retweets Post Naming Alleged Whistleblower.&nbsp;Badgers Brace For Oregon Defensive End Kayvon Thibodeaux.&nbsp;Alexandria Church, School Await New Beginning After Tornado.&nbsp;Mason City Students Make Blankets For Younger Children.&nbsp;Get Into Winter  On Snowshoes.&nbsp;
